# tftp-hpa

./: .gitignore  CHANGES  INSTALL.tftp  MCONFIG.in  Makefile  README  README.security  aclocal.m4  aconfig.h.in  config.h  config.h.in  configure  configure.in  project.config  release.sh  tftp.spec.in  version
common/: tftpsubs.c  tftpsubs.h
lib/: Makefile  bsdsignal.c  daemon.c  dup2.c  xmalloc.c  xstrdup.c
tftp/: Makefile  extern.h  main.c  tftp.1  tftp.1.in  tftp.c  tftpsubs.c  tftpsubs.h
tftpd/: Makefile  misc.c  recvfrom.c  recvfrom.h  remap.c  remap.h  sample.rules  tftpd.8  tftpd.8.in  tftpd.c  tftpd.h
